--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing=20>
       <tr>
-        <td>  <img src="https://mail.google.com/mail/u/0?ui=2&ik=09b401b042&attid=0.1&permmsgid=msg-a:r-2222258922838223271&th=183b7d7a5ad62dbf&view=fimg&fur=ip&sz=s0-l75-ft&attbid=ANGjdJ9z8UsIRvkWVZBXAOJiC4haJdp4FU8XNxWkn4OsU3XdMSU0L0vOTwGrzbZyf0PEZT2Axn0QDZWfgp6M3-67Jia3et-a-dRosM6SGWxrC_7su1aUjaWEUFQ6AP8&disp=emb&realattid=ii_l8zyxqrx0" alt="Proflie Picture">
+        <td>  <img src="https://github.com/Niveditha-J/CV/blob/main/WIN_20221005_12_39_59_Pro%20(2)-modified.png" alt="Proflie Picture">
         <td><h1><b><strong>Niveditha Jayakumar</strong></b></h1>
         <h2><strong>Future Engineer and <a href="https://www.wikipedia.org/">Web developer:</a> </strong></h2>
         <p> I love to my family members a lot as there are my backbone of life.</P>
