--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing=20>
       <tr>
-        <td>  <img src="https://github.com/Niveditha-J/CV/blob/main/WIN_20221005_12_39_59_Pro%20(2)-modified.png" alt="Proflie Picture">
+        <td>  <img src="Images.png" alt="Proflie Picture">
         <td><h1><b><strong>Niveditha Jayakumar</strong></b></h1>
         <h2><strong>Future Engineer and <a href="https://www.wikipedia.org/">Web developer:</a> </strong></h2>
         <p> I love to my family members a lot as there are my backbone of life.</P>
